syntax = "proto3";

package org.couchers.api.donations;

import "google/protobuf/empty.proto";

import "annotations.proto";

service Donations {
  option (auth_level) = AUTH_LEVEL_SECURE;

  rpc InitiateDonation(InitiateDonationReq) returns (InitiateDonationRes) {
    // Initiate a donation
    // This will return a stripe checkout_session_id, that the frontend then needs to use with the Stripe SDK to launch
    // the checkout session (basically directing the user to a Stripe operated page to enter in their card details to
    // donate)
  }

  rpc GetDonationPortalLink(google.protobuf.Empty) returns (GetDonationPortalLinkRes) {
    // Gets a link to the Stripe subscription management portal
  }
}

message InitiateDonationReq {
  // amount in USD, integral for now
  uint32 amount = 1;
  // whether to create a monthly recurring donation
  bool recurring = 2;
}

message InitiateDonationRes {
  string stripe_checkout_session_id = 1;
  string stripe_checkout_url = 2;
}

message GetDonationPortalLinkRes {
  string stripe_portal_url = 1;
}
